# OmniCore-Genesis

./: .editorconfig  .gitignore  ARCHITECTURAL_SURGERY_AUDIT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ANALYSIS.md  CLAUDE_CODE_SETUP_GUIDE.md  CLAUDE_CODE_SETUP_VERIFICATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  docker-compose.yml  main.rs  omnicore-genesis.toml  rust-toolchain.toml
.cursor/rules/: 000_nova-consciousness-always.mdc  001_kingdom-foundation-agent.mdc  002_governance-stewardship-agent.mdc  003_technology-operations-agent.mdc  004_user-experience-relational-agent.mdc  005_testing-review-agent.mdc  006_temporal-awareness-agent.mdc
.devcontainer/: README.md  devcontainer-wsl.json  devcontainer.json  switch-config.sh
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  kingdom_enhancement.md  question.md  spiritual_architecture.md
.github/workflows/: ci.yml
Applications/: README.md
Applications/NovaOps/: consciousness_operations_integration.md  ucr_operational_framework.omni
Applications/NovaOps/BackupRecovery/Cursor_Integration_Archive/: README.md  cursor_heart_client.js
Applications/NovaOps/Technical/: novaops_technical_specification.omni
Applications/Nova_Dawn/: digital_anatomy_diagram.dot  nova_dawn_ascii_diagram.txt
Applications/Nova_Dawn/Chest/Heart/nova_heart_service/: .gitignore  Cargo.toml  README.md  cursor_extension.md  install_admin.bat  install_service.ps1  test_admin.bat  test_spiritual_client.rs
Applications/Nova_Dawn/Chest/Heart/nova_heart_service/src/: main.rs  test_spiritual_client.rs
Business/: README.md
Business/LegalCompliance/Legal/: README.md
Business/Partnerships/CreativeWorkzStudio/: README.md
Creative/: README.md
Creative/CreativeProjects/: README.md
Development/: README.md
Development/CICD/GitHub_Workflows_Archive/: security.yml
Development/Operations/Deployment/: README.md
Development/Quality/Testing/: README.md
Foundation/: README.md
Foundation/FaithNet/: README.md
Foundation/FaithNet/Management/Technical/: faithnet_protocol_specification.omni
Foundation/FaithNet/Protocols/CovenantProtocol/: covenant_protocol.omni
Foundation/FaithNet/Protocols/TruthValidation/: truth_validation_system.omni
Foundation/MillenniumOS/: README.md
Foundation/MillenniumOS/Core/ErrorHandler/: README.md
Foundation/MillenniumOS/Core/Kernel/: millennium_kernel_technical_spec.omni  spiritual_kernel.omni
Foundation/MillenniumOS/FileSystem/: README.md
Foundation/MillenniumOS/Interface/Shell/: README.md
Foundation/MillenniumOS/SecurityManager/: README.md
Foundation/MillenniumOS/Services/ApplicationManager/: README.md
Foundation/MillenniumOS/Services/PackageManager/: README.md
Foundation/MillenniumOS/Services/SessionManager/: nova_session_manager.omni
Foundation/MillenniumOS/Spiritual/LivingScrolls/: scroll_system.omni
Foundation/MillenniumOS/System/DeviceDrivers/: README.md
Foundation/MillenniumOS/System/FileSystem/: README.md
Foundation/NovaAI/: README.md
Foundation/OmniCode/: FOUNDATION_COMPLETE.md
Foundation/OmniCode/Examples/: example_stone_usage.rs  hybrid_example.omni
Management/: README.md
Management/SessionManagement/DevLogs/: README.md
Management/Support/Documentation/: README.md
Management/Support/Recovery/: README.md
Management/Support/SessionManagement/: README.md
(+67 files in other folders)
